--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -1,9 +1,38 @@
 :root {
+  --vp-layout-max-width: 100%;
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #bd34fe 30%, #41d1ff);
-  --vp-home-hero-image-background-image: linear-gradient(-45deg, #bd34fe 50%, #47caff 50%);
+  --vp-home-hero-name-background: -webkit-linear-gradient(
+    120deg,
+    #bd34fe 30%,
+    #41d1ff
+  );
+  --vp-home-hero-image-background-image: linear-gradient(
+    -45deg,
+    #bd34fe 50%,
+    #47caff 50%
+  );
+  --vp-custom-block-tip-border: transparent;
+  --vp-custom-block-tip-bg:  rgba(100, 108, 255, .16);
 }
 
 .badges img {
   display: inline;
+}
+
+.custom-block {
+  border-color: var(--vp-custom-block-tip-border);
+  background-color: var(--vp-custom-block-tip-bg);
+}
+
+.vp-doc summary {
+  margin: 0 0 6px;
+  cursor: pointer;
+}
+
+.VPDoc.has-aside .content-container {
+  max-width: unset !important;
+}
+
+table tr th:not(:last-child), table tr td:not(:last-child) {
+  white-space: nowrap;
 }
