--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -20,8 +20,8 @@
 
 .container .main .name .clip .star {
   position: absolute;
-  top: 0;
-  right: -70px;
+  top: -10px;
+  right: -80px;
 }
 
 .VPNavBarMenuLink::after {
